kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taqueria-bonjour-deployment
  labels:
    app: taqueria-bonjour
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: taqueria-bonjour
  template:
    metadata:
      labels:
        app: taqueria-bonjour
    spec:
      containers:
      - name: taqueria-bonjour
        image: ghcr.io/paulkiernan/taqueria-bonjour:0.0.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
