kube/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterIssuer
    field.cattle.io/description: Frontend ingress for main personal website splash page
  name: taqueria-bonjour-frontend-ingress
  namespace: taqueria-bonjour
spec:
  rules:
  - host: bonjour.paulynomial.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: taqueria-bonjour-frontend-service
          servicePort: 80
  tls:
  - hosts:
    - bonjour.paulynomial.com
    secretName: taqueria-bonjour-frontend-ingress-prod-tls
